# snark-challenge

./: .gitignore  Dockerfile  README.md
descriptions/: curve_background.markdown  good_cycles.markdown  intro.markdown  testing_platform.markdown
docs/: MNT4753.html  MNT4753.markdown  MNT6753.html  MNT6753.markdown  index.html  index.markdown  intro.html  intro.markdown  problem-01-Field arithmetic.html  problem-01-field-arithmetic.html  problem-01-field-arithmetic.markdown  problem-02-Quadratic extension arithmetic.html  problem-02-quadratic-extension-arithmetic.html  problem-02-quadratic-extension-arithmetic.markdown  problem-03-Cubic extension arithmetic.html  problem-03-cubic-extension-arithmetic.html  problem-03-cubic-extension-arithmetic.markdown  problem-04-Curve operations.html  problem-04-curve-operations.html  problem-04-curve-operations.markdown  problem-05-multi-exponentiation.html  problem-05-multi-exponentiation.markdown  problem-06-curve-operation.html  problem-06-curve-operation.markdown  problem-07-groth16-prover-challenges.html  (+27 more)
reference-05-verifier/: .gitignore  README.markdown  build.sh  dune  jsnat.ml  main.ml  pedersen.ml  template.ts  verifier.ts
reference-05-verifier/blake2/: dune
reference-05-verifier/bowe_gabizon_hash/: bowe_gabizon_hash.ml
reference-05-verifier/crypto_lib/: crypto_lib.ml  dune
reference-05-verifier/lib/pedersen/: dune  pedersen.ml
reference-05-verifier/lib/snarkette/src/: bowe_gabizon.ml  dune
reference-05-verifier/runner/: dune  main.ml  runner.ml
reference-05-verifier/snarkette/src/: elliptic_curve.ml
(+357 files in other folders)
